syntax = "proto3";

package stats.service.collector;

import "stats/messages/user_action.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.grpc.collector";

service UserActionController {
  rpc CollectUserAction (message.action.UserActionProto)
    returns (google.protobuf.Empty);
}